Fix some expanding out of screen issues

--- a/Client/style.css
+++ b/Client/style.css
@@ -11,6 +11,7 @@ body {
     background-color: #f4f4f4;
     height: 100vh;
     box-sizing: border-box;
+    overflow: hidden;
 }
 
 #join-box {
